- Add Mapster to App

--- a/SurveyBasket/appsettings.json
+++ b/SurveyBasket/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefualtConnection": "server=(localdb)\\MSSQLLocalDB;databaseName=ClinicalApp;Trusted_Connection= true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
