- Add Authentication Service to Application

--- a/SurveyBasket/appsettings.json
+++ b/SurveyBasket/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefualtConnection": "server=(localdb)\\MSSQLLocalDB;databaseName=ClinicalApp;Trusted_Connection= true;"
+    "DefualtConnection": "Server=(localdb)\\MSSQLLocalDB;Initial Catalog=SurveyBasket;Trusted_Connection= true;"
   },
   "Logging": {
     "LogLevel": {
