- Read All OPtions from AppSettings

--- a/SurveyBasket/appsettings.json
+++ b/SurveyBasket/appsettings.json
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "jwt": {
+    "Key": "",
+    "Issuer": "SurveyBasket WebApp",
+    "Audience": "SurveyBasket WebApp Users",
+    "ExpiredIn": 30
+  }
 }
