- Add Auditable Class - Add Cross Origin and Read it From AppSettings

--- a/SurveyBasket/appsettings.json
+++ b/SurveyBasket/appsettings.json
@@ -14,5 +14,9 @@
     "Issuer": "SurveyBasket WebApp",
     "Audience": "SurveyBasket WebApp Users",
     "ExpiredIn": 30
-  }
+  },
+  "AllowedOrigins": [
+    "https://les-dev.net",
+    "https://les-dev-bestronggym.runasp.net/"
+  ]
 }
