- Add Serilog to App

--- a/SurveyBasket/appsettings.json
+++ b/SurveyBasket/appsettings.json
@@ -2,10 +2,31 @@
   "ConnectionStrings": {
     "DefualtConnection": "Server=(localdb)\\MSSQLLocalDB;Initial Catalog=SurveyBasket;Trusted_Connection= true;"
   },
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Override": {
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "D:\\Logs\\ServyBasketWebAPIApp\\log-.txt",
+          "rollingInterval": "Day",
+          //"outputTemplate": "{Timestamp}{Message}{NewLine:1}{Execption:1}",
+          "formatter": "Serilog.Formatting.Json.JsonFormatter"
+          //"formatter": "Serilog.Formatting.Compact.CompactJsonFormatter,Serilog.Formating.Compact"
+        }
+      }
+    ],
+    "Enrich": ["FromLogContext","WithMachineName"],
+    "Properties": {
+      "ApplicationName": "ServyBasketWebApp"
     }
   },
   "AllowedHosts": "*",
