--- a/SurveyBasket/appsettings.Development.json
+++ b/SurveyBasket/appsettings.Development.json
@@ -1,8 +1,28 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Override": {
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "D:\\Logs\\ServyBasketWebAPIApp\\log-.txt",
+          "rollingInterval": "Day",
+          //"outputTemplate": "{Timestamp}{Message}{NewLine:1}{Execption:1}"
+          "formatter": "Serilog.Formatting.Json.JsonFormatter"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName" ],
+    "Properties": {
+      "ApplicationName": "ServyBasketWebApp"
     }
   }
 }
