- Add Email Configurations

--- a/SurveyBasket/appsettings.json
+++ b/SurveyBasket/appsettings.json
@@ -39,5 +39,12 @@
   "AllowedOrigins": [
     "https://les-dev.net",
     "https://les-dev-bestronggym.runasp.net/"
-  ]
+  ],
+  "Mailsettings": {
+    "Mail": "chanelle.jaskolski22@ethereal.email",
+    "DisplayName": "Survey Basket",
+    "Password": "",
+    "Host": "smtp.ethereal.email",
+    "Port": 587
+  }
 }
