- Add HangFire Configerations

--- a/SurveyBasket/appsettings.json
+++ b/SurveyBasket/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefualtConnection": "Server=(localdb)\\MSSQLLocalDB;Initial Catalog=SurveyBasket;Trusted_Connection= true;"
+    "DefualtConnection": "Server=(localdb)\\MSSQLLocalDB;Initial Catalog=SurveyBasket;Trusted_Connection= true;",
+    "HangFire": "Server=(localdb)\\MSSQLLocalDB;Initial Catalog=SurveyBasketJobs;Trusted_Connection= true;"
   },
   "Serilog": {
     "MinimumLevel": {
