- Add Protection to HangFire DashBorad By creatring username and Password

--- a/SurveyBasket/appsettings.json
+++ b/SurveyBasket/appsettings.json
@@ -47,5 +47,9 @@
     "Password": "",
     "Host": "smtp.ethereal.email",
     "Port": 587
+  },
+  "HangFireSettings": {
+    "userName": "",
+    "Password": ""
   }
 }
