--- a/SurveyBasket/appsettings.json
+++ b/SurveyBasket/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefualtConnection": "Server=(localdb)\\MSSQLLocalDB;Initial Catalog=SurveyBasket;Trusted_Connection= true;",
-    "HangFire": "Server=(localdb)\\MSSQLLocalDB;Initial Catalog=SurveyBasketJobs;Trusted_Connection= true;"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Initial Catalog=SurveyBasket;Trusted_Connection=True;",
+    "HangFire": "Server=(localdb)\\MSSQLLocalDB;Initial Catalog=SurveyBasketJobs;Trusted_Connection=true;"
   },
   "Serilog": {
     "MinimumLevel": {
