--- a/SurveyBasket/SurveyBasket.csproj
+++ b/SurveyBasket/SurveyBasket.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="AspNetCore.HealthChecks.Hangfire" Version="8.0.0" />
     <PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="8.0.0" />
     <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="9.0.0" />
+    <PackageReference Include="AspNetCore.HealthChecks.Uris" Version="8.0.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
     <PackageReference Include="Hangfire.AspNetCore" Version="1.8.18" />
