--- a/SurveyBasket/SurveyBasket.csproj
+++ b/SurveyBasket/SurveyBasket.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>0d782ab7-f089-4825-844f-ba6574cccc39</UserSecretsId>
